--- a/src/main/resources/templates/MovieById.html
+++ b/src/main/resources/templates/MovieById.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+	</head>
+
+	<!-- Bootstrap CSS -->
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
+
 <body>
-	<h1> Il film con id [[${id}]] è: [[${movie}]]</h1>
+	
+	<!-- Header -->
+	<header th:replace="fragments/header :: header('Best of', 'Movies', '/movies', 'Songs', '/songs')">
+		
+	</header>
+	
+	<main class="text-center mt-5">
+		<h1> Il film con id [[${id}]] è: [[${movie}]]</h1>
+		<p>Trama del film bla bla bla</p>	
+	</main>
+	
+	
 </body>
 </html>
