--- a/src/main/resources/templates/Movies.html
+++ b/src/main/resources/templates/Movies.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+
+	<!-- Bootstrap CSS -->
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
 </head>
 <body>
 	
+	<header th:replace="fragments/header :: header('Best of', 'Movies', '/movies', 'Songs', '/songs')">
+		
+	</header>
+		
 	
-	<h1>Lista dei migliori Film: </h1>
-	<ul>
-		<li>[[${movies}]]</li>
-	</ul>
+	<main class="text-center mt-5">
+		
+		<h1>Lista dei migliori Film: </h1>
+		
+		<ul class="mt-3">
+			<li th:each="movie : ${movies}">
+				<a th:href="'/movies/' + ${movie.id}" class="btn" th:text="${movie.title}"></a>
+			</li>
+		</ul>
+		
+	</main>	
 
 </body>
 </html>
