--- a/src/main/resources/templates/SongById.html
+++ b/src/main/resources/templates/SongById.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+	
+	<!-- Bootstrap CSS -->
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
+	
 </head>
 <body>
-	<h1> La canzone con id [[${id}]] è: [[${song}]]</h1>
+	
+	<!-- Header -->
+	<header th:replace="fragments/header :: header('Best of', 'Movies', '/movies', 'Songs', '/songs')">
+		
+	</header>
+	
+	<main class="text-center mt-5">
+		<h1> La canzone con id [[${id}]] è: [[${song}]]</h1>
+		<p>Testo canzone bla la</p>	
+	</main>
 </body>
 </html>
