--- a/src/main/resources/templates/Songs.html
+++ b/src/main/resources/templates/Songs.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+
+	<!-- Bootstrap CSS -->
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
 </head>
 <body>
 
-	<h1>Lista dei migliori Film: </h1>
-	<ul>
-		<li>[[${songs}]]</li>
-	</ul>
+	<!-- Header -->
+	<header th:replace="fragments/header :: header('Best of', 'Movies', '/movies', 'Songs', '/songs')">
+		
+	</header>
+
+	
+	
+	<main class="text-center mt-5">
+		
+		<h1>Lista delle migliori canzoni: </h1>
+		
+		<ul class="mt-3">
+			<li th:each="song : ${songs}">
+				<a th:href="'/songs/' + ${song.id}" class="btn" th:text="${song.title}"></a>
+			</li>
+		</ul>
+		
+	</main>	
+	
 
 </body>
 </html>
